ErrLogs/alarwm.py.err.log
  File "/home/robot/dexter Alarm/alarm.py", line 92
    def main_menu(self):
      ^
IndentationError: expected an indented block
